# nifalcon_mechanics

./: AUTHORS.txt  CMakeLists.txt  ChangeLog.txt  LICENSE_BSD.txt  README.txt
cmake_modules/: Findlibnifalcon.cmake
src/: CMakeLists.txt
src/controller/: Controller.cpp  Controller.h
