#cmake directives

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)
SET(CMAKE_MODULE_PATH "./cmake_modules/" "/usr/local/share/cmake-2.6/Modules/")

#setting link directory policy

IF(COMMAND cmake_policy)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND cmake_policy)

PROJECT(falcon_mechanics)

#SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_BUILD_TYPE "Release")

SET(OpenSceneGraph_DIR)
FIND_PACKAGE(libnifalcon REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(GLUI REQUIRED)
FIND_PACKAGE(ODE REQUIRED)
FIND_PACKAGE(osg REQUIRED)
FIND_PACKAGE(osgViewer REQUIRED)
FIND_PACKAGE(osgGA REQUIRED)
FIND_PACKAGE(osgDB REQUIRED)
FIND_PACKAGE(osgFX REQUIRED)

SET(BOOST_LIBRARYDIR /opt/local)
find_package(Boost 1.33.1 COMPONENTS thread bind)

#Local output paths

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)

IF(UNIX)
  IF(NOT INCLUDE_INSTALL_DIR)
	SET(INCLUDE_INSTALL_DIR /usr/local/include)
  ENDIF(NOT INCLUDE_INSTALL_DIR)
  IF(NOT LIBRARY_INSTALL_DIR)
	SET(LIBRARY_INSTALL_DIR /usr/local/lib)
  ENDIF(NOT LIBRARY_INSTALL_DIR)
  IF(NOT RUNTIME_INSTALL_DIR)
	SET(RUNTIME_INSTALL_DIR /usr/local/bin)
  ENDIF(NOT RUNTIME_INSTALL_DIR)
ENDIF(UNIX)

MESSAGE(STATUS "Include Install Directory: ${INCLUDE_INSTALL_DIR}")
MESSAGE(STATUS "Library Install Directory: ${LIBRARY_INSTALL_DIR}")
MESSAGE(STATUS "Runtime Install Directory: ${RUNTIME_INSTALL_DIR}")

ADD_SUBDIRECTORY(src/)

